--- a/registration.html
+++ b/registration.html
@@ -31,7 +31,7 @@
         <div class="form-group">
             <label for=""> Email:</label>
             <br>
-            <input type="text" class="css-input" id="email" name="name" placeholder="Enter Email" required/>
+            <input type="email" class="css-input" id="email" name="name" placeholder="Enter Email" required/>
         </div>
         <br>
         
